clusters/rs.soeren.cloud/rabbitmq/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
    istio-injection: enabled
