clusters/rs.soeren.cloud/rabbitmq/rabbitmq-management-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-management
spec:
  hosts:
    - rabbitmq-management.rs.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rabbitmq-management
            port:
              number: 80
